# SmartHouse_embedded

./: .gitignore  README.md
libgpio-1.0/: LICENCE  Makefile.am  Makefile.in  configure  configure.ac  configure~
libgpio-1.0/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
libgpio-1.0/include/: gpio.h
libgpio-1.0/lib/: Makefile.in  gpio.c
libgpio-1.0/src/: Makefile.am  Makefile.in  main.c
mobile_app/back-end/: index.js  package-lock.json  package.json
mobile_app/back-end/middleware/: auth.js
mobile_app/back-end/models/: user.js
mobile_app/back-end/routes/: users.js
mobile_app/back-end/startup/: config.js  db.js
mobile_app/front-end/embeddedhouseapp/: .gitignore  README.md  pubspec.yaml
mobile_app/front-end/embeddedhouseapp/android/app/: build.gradle
mobile_app/front-end/embeddedhouseapp/ios/Runner/: Info.plist
mobile_app/front-end/embeddedhouseapp/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/front-end/embeddedhouseapp/lib/: main.dart
mobile_app/front-end/embeddedhouseapp/lib/dialogs/: create_account_dialog.dart  sign_in_dialog.dart  sign_out_dialog.dart  turn_off_light_1.dart  turn_off_light_2.dart  turn_off_light_3.dart  turn_off_light_4.dart  turn_off_light_5.dart  turn_on_light_1.dart  (+4 more)
mobile_app/front-end/embeddedhouseapp/linux/: CMakeLists.txt  my_application.cc
mobile_app/front-end/embeddedhouseapp/test/: widget_test.dart
mobile_app/front-end/embeddedhouseapp/web/: index.html  manifest.json
mobile_app/front-end/embeddedhouseapp/windows/: CMakeLists.txt
webserver/: index.php  script.php
(+13 files in other folders)
